style: added smiley

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Dont worry, am the strongest</h1>
+    <h1>Welcome!</h1>
+    <p>We make use of the Joke Api to get a <span>random joke</span>, I hope you enjoy it <span class="muskaan"> ^_^ </span></p>
     <button id="btn">Get a joke</button>
     <div id="setup">
     </div>
